--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "init": "yarn || yarn config set registry https:registry.npm.taobao.org/ ",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
@@ -10,6 +11,8 @@
     "@iconify/iconify": "^2.1.0",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.24.0",
+    "cookies-ts": "^1.0.5",
+    "lodash-es": "^4.17.21",
     "vite-plugin-importer": "^0.2.5",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
@@ -18,8 +21,14 @@
   "devDependencies": {
     "@iconify/json": "^1.1.428",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/lodash-es": "^4.17.5",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^9.8.8",
+    "eslint": "^8.2.0",
+    "eslint-define-config": "^1.1.3",
     "less": "^4.1.2",
     "postcss": "^7.0.39",
     "prettier": "2.4.1",
@@ -27,6 +36,7 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-purge-icons": "^0.7.0",
+    "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.3.0"
   }
 }
