--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer": "^9.8.8",
     "eslint": "^8.2.0",
-    "eslint-define-config": "^1.1.3",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-define-config": "^1.0.7",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^8.1.1",
     "less": "^4.1.2",
     "postcss": "^7.0.39",
     "prettier": "2.4.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
