--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "vite-plugin-purge-icons": "^0.7.0",
     "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.3.0"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
