--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-purge-icons": "^0.7.0",
+    "vite-plugin-svg-icons": "^1.0.5",
     "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.3.0"
   },
