--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^8.1.1",
     "less": "^4.1.2",
+    "mockjs": "^1.1.0",
     "postcss": "^7.0.39",
     "prettier": "2.4.1",
     "stylelint": "^14.1.0",
