--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dev": "vite",
     "init": "yarn || yarn config set registry https:registry.npm.taobao.org/ ",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/"
   },
   "dependencies": {
     "@iconify/iconify": "^2.1.0",
@@ -30,8 +33,10 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-define-config": "^1.0.7",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^8.1.1",
+    "jest": "^27.4.3",
     "less": "^4.1.2",
     "mockjs": "^1.1.0",
     "postcss": "^7.0.39",
@@ -41,6 +46,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "ts-jest": "^27.1.1",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-mock": "^2.9.6",
