--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "cookies-ts": "^1.0.5",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.1",
     "vite-plugin-importer": "^0.2.5",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
